--- a/.htaccess
+++ b/.htaccess
@@ -44,13 +44,11 @@ Options -Indexes
     RewriteRule .* - [F,L]
 </IfModule>
 
-
 # =========================================
 # 6. Strong Security Headers
 # =========================================
 <IfModule mod_headers.c>
-    Header unset X-Powered-By Next Js
-
+    Header unset X-Powered-By
     # Security headers
     Header always set X-Content-Type-Options "nosniff"
     Header always set X-Frame-Options "SAMEORIGIN"
@@ -58,22 +56,21 @@ Options -Indexes
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     Header always set Strict-Transport-Security "max-age=15552000; includeSubDomains; preload"
     Header always set Permissions-Policy "geolocation=(), microphone=(), camera=(), payment=(), usb=()"
+
+    # Optional: Prevent iframe embedding from other domains (CSP)
+    # Header always set Content-Security-Policy "frame-ancestors 'self';"
 </IfModule>
 
 # =========================================
 # 7. Enable Gzip Compression (Performance)
 # =========================================
 <IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/html text/css text/javascript application/javascript application/json
+    AddOutputFilterByType DEFLATE text/html text/css text/javascript application/javascript application/json image/svg+xml
 </IfModule>
 
 # =========================================
 # 8. SEO-Friendly Robots and Sitemap
 # =========================================
-# Ensure robots.txt exists in root
-# Googlebot allowed to crawl all pages by default
-
-# Optional: Force canonical URLs (prevents duplicate content)
 <IfModule mod_rewrite.c>
     RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^\s]+)\.php [NC]
     RewriteRule ^ %1 [R=301,L]
@@ -83,3 +80,44 @@ Options -Indexes
 # 9. Custom 404 Page
 # =========================================
 ErrorDocument 404 /404.php
+
+# =========================================
+# 10. Caching for Static Assets (Performance)
+# =========================================
+<IfModule mod_expires.c>
+    ExpiresActive On
+
+    # Images - cache for 1 year
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/webp "access plus 1 year"
+    ExpiresByType image/svg+xml "access plus 1 year"
+    ExpiresByType image/x-icon "access plus 1 year"
+
+    # Fonts - cache for 1 year
+    ExpiresByType font/woff "access plus 1 year"
+    ExpiresByType font/woff2 "access plus 1 year"
+    ExpiresByType application/font-woff "access plus 1 year"
+
+    # CSS & JS - cache for 1 month
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month"
+
+    # JSON, XML - no caching (dynamic)
+    ExpiresByType application/json "access plus 0 seconds"
+    ExpiresByType application/xml "access plus 0 seconds"
+</IfModule>
+
+<IfModule mod_headers.c>
+    # Match caching headers with Expires
+    <FilesMatch "\.(ico|jpg|jpeg|png|gif|webp|svg|woff2|woff|ttf|css|js|mp4)$">
+        Header set Cache-Control "public, max-age=31536000, immutable"
+    </FilesMatch>
+
+    # No caching for dynamic content
+    <FilesMatch "\.(html|htm|php|json|xml)$">
+        Header set Cache-Control "no-store, no-cache, must-revalidate, max-age=0"
+    </FilesMatch>
+</IfModule>
