--- a/.htaccess
+++ b/.htaccess
@@ -51,9 +51,7 @@ Options -Indexes
     Header unset X-Powered-By
     # Security headers
     Header always set X-Content-Type-Options "nosniff"
-
-   # Header always set X-Frame-Options "SAMEORIGIN"
-
+    Header always set X-Frame-Options "SAMEORIGIN"
     Header always set X-XSS-Protection "1; mode=block"
     Header always set Referrer-Policy "strict-origin-when-cross-origin"
     Header always set Strict-Transport-Security "max-age=15552000; includeSubDomains; preload"
